// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withBannerAlertState(BpkBannerAlert) should render correctly 1`] = `
<div
  className=""
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": "auto",
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }
>
  <div>
    <section
      className="bpk-banner-alert bpk-banner-alert--success"
    >
      <header
        aria-live="assertive"
        className="bpk-banner-alert__header"
        onClick={[Function]}
        role="alert"
      >
        <span
          className="bpk-banner-alert__icon"
        >
          <span
            style={
              Object {
                "display": "inline-block",
                "lineHeight": "1.125rem",
                "marginTop": "0.1875rem",
                "verticalAlign": "top",
              }
            }
          >
            <svg
              className="bpk-banner-alert__success-icon"
              height="18"
              style={
                Object {
                  "height": "1.125rem",
                  "width": "1.125rem",
                }
              }
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm5.9 7l-6.5 7.4c-.4.5-1.2.6-1.7.1l-3.5-3.1c-.3-.2-.3-.6-.1-.8l.8-.9c.2-.3.6-.3.8-.1l2.4 2.1c.1.1.3.1.3 0L16 7.4c.2-.2.6-.3.8-.1l.9.8c.3.3.4.6.2.9z"
              />
            </svg>
          </span>
        </span>
         
        <span
          className="bpk-banner-alert__message"
        >
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </span>
         
      </header>
      <div
        onTransitionEnd={[Function]}
        style={
          Object {
            "MozTransition": "height 200ms ease ",
            "OTransition": "height 200ms ease ",
            "WebkitTransition": "height 200ms ease ",
            "height": 0,
            "msTransition": "height 200ms ease ",
            "overflow": "hidden",
            "transition": "height 200ms ease ",
          }
        }
      >
        <div>
          <div
            className="bpk-banner-alert__children-container"
          />
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`withBannerAlertState(BpkBannerAlert) should render correctly and hide after some seconds 1`] = `
<div
  className=""
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": "auto",
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }
>
  <div>
    <section
      className="bpk-banner-alert bpk-banner-alert--success"
    >
      <header
        aria-live="assertive"
        className="bpk-banner-alert__header bpk-banner-alert__header--expandable"
        onClick={[Function]}
        role="alert button"
      >
        <span
          className="bpk-banner-alert__icon"
        >
          <span
            style={
              Object {
                "display": "inline-block",
                "lineHeight": "1.125rem",
                "marginTop": "0.1875rem",
                "verticalAlign": "top",
              }
            }
          >
            <svg
              className="bpk-banner-alert__success-icon"
              height="18"
              style={
                Object {
                  "height": "1.125rem",
                  "width": "1.125rem",
                }
              }
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm5.9 7l-6.5 7.4c-.4.5-1.2.6-1.7.1l-3.5-3.1c-.3-.2-.3-.6-.1-.8l.8-.9c.2-.3.6-.3.8-.1l2.4 2.1c.1.1.3.1.3 0L16 7.4c.2-.2.6-.3.8-.1l.9.8c.3.3.4.6.2.9z"
              />
            </svg>
          </span>
        </span>
         
        <span
          className="bpk-banner-alert__message"
        >
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </span>
         
        <span
          className="bpk-banner-alert__toggle"
        >
          <button
            aria-expanded={false}
            aria-label="View more"
            className="bpk-banner-alert__toggle-button"
            title="View more"
          >
            <span
              style={
                Object {
                  "display": "inline-block",
                  "lineHeight": "1.125rem",
                  "marginTop": "0.1875rem",
                  "verticalAlign": "top",
                }
              }
            >
              <svg
                className="bpk-banner-alert__expand-icon"
                height="18"
                style={
                  Object {
                    "height": "1.125rem",
                    "width": "1.125rem",
                  }
                }
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 17.5l-7.2-6.4c-.6-.5-.7-1.5-.1-2.1.5-.6 1.5-.7 2.1-.1l5.2 4.6 5.2-4.6c.6-.6 1.6-.5 2.1.1s.5 1.6-.1 2.1L12 17.5z"
                />
              </svg>
            </span>
          </button>
        </span>
      </header>
      <div
        onTransitionEnd={[Function]}
        style={
          Object {
            "MozTransition": "height 200ms ease ",
            "OTransition": "height 200ms ease ",
            "WebkitTransition": "height 200ms ease ",
            "height": 0,
            "msTransition": "height 200ms ease ",
            "overflow": "hidden",
            "transition": "height 200ms ease ",
          }
        }
      >
        <div>
          <div
            className="bpk-banner-alert__children-container"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id
blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis
nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at. Mauris
porta varius ullamcorper. Sed laoreet libero mauris, non pretium lectus accumsan et. Suspendisse vehicula ullamcorper
sapien, et dapibus mi aliquet non. Pellentesque auctor sagittis lectus vitae rhoncus. Fusce id enim porttitor, mattis
ante in, vestibulum nulla.
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`withBannerAlertState(BpkBannerAlert) should render correctly and hide after some seconds 2`] = `
<div
  className=""
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": "auto",
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }
>
  <div />
</div>
`;

exports[`withBannerAlertState(BpkBannerAlert) should render correctly collapsed 1`] = `
<div
  className=""
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": "auto",
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }
>
  <div>
    <section
      className="bpk-banner-alert bpk-banner-alert--success"
    >
      <header
        aria-live="assertive"
        className="bpk-banner-alert__header bpk-banner-alert__header--expandable"
        onClick={[Function]}
        role="alert button"
      >
        <span
          className="bpk-banner-alert__icon"
        >
          <span
            style={
              Object {
                "display": "inline-block",
                "lineHeight": "1.125rem",
                "marginTop": "0.1875rem",
                "verticalAlign": "top",
              }
            }
          >
            <svg
              className="bpk-banner-alert__success-icon"
              height="18"
              style={
                Object {
                  "height": "1.125rem",
                  "width": "1.125rem",
                }
              }
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm5.9 7l-6.5 7.4c-.4.5-1.2.6-1.7.1l-3.5-3.1c-.3-.2-.3-.6-.1-.8l.8-.9c.2-.3.6-.3.8-.1l2.4 2.1c.1.1.3.1.3 0L16 7.4c.2-.2.6-.3.8-.1l.9.8c.3.3.4.6.2.9z"
              />
            </svg>
          </span>
        </span>
         
        <span
          className="bpk-banner-alert__message"
        >
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </span>
         
        <span
          className="bpk-banner-alert__toggle"
        >
          <button
            aria-expanded={false}
            aria-label="View more"
            className="bpk-banner-alert__toggle-button"
            title="View more"
          >
            <span
              style={
                Object {
                  "display": "inline-block",
                  "lineHeight": "1.125rem",
                  "marginTop": "0.1875rem",
                  "verticalAlign": "top",
                }
              }
            >
              <svg
                className="bpk-banner-alert__expand-icon"
                height="18"
                style={
                  Object {
                    "height": "1.125rem",
                    "width": "1.125rem",
                  }
                }
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 17.5l-7.2-6.4c-.6-.5-.7-1.5-.1-2.1.5-.6 1.5-.7 2.1-.1l5.2 4.6 5.2-4.6c.6-.6 1.6-.5 2.1.1s.5 1.6-.1 2.1L12 17.5z"
                />
              </svg>
            </span>
          </button>
        </span>
      </header>
      <div
        onTransitionEnd={[Function]}
        style={
          Object {
            "MozTransition": "height 200ms ease ",
            "OTransition": "height 200ms ease ",
            "WebkitTransition": "height 200ms ease ",
            "height": 0,
            "msTransition": "height 200ms ease ",
            "overflow": "hidden",
            "transition": "height 200ms ease ",
          }
        }
      >
        <div>
          <div
            className="bpk-banner-alert__children-container"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id
blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis
nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at. Mauris
porta varius ullamcorper. Sed laoreet libero mauris, non pretium lectus accumsan et. Suspendisse vehicula ullamcorper
sapien, et dapibus mi aliquet non. Pellentesque auctor sagittis lectus vitae rhoncus. Fusce id enim porttitor, mattis
ante in, vestibulum nulla.
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`withBannerAlertState(BpkBannerAlert) should render correctly expanded 1`] = `
<div
  className=""
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": "auto",
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }
>
  <div>
    <section
      className="bpk-banner-alert bpk-banner-alert--success"
    >
      <header
        aria-live="assertive"
        className="bpk-banner-alert__header bpk-banner-alert__header--expandable"
        onClick={[Function]}
        role="alert button"
      >
        <span
          className="bpk-banner-alert__icon"
        >
          <span
            style={
              Object {
                "display": "inline-block",
                "lineHeight": "1.125rem",
                "marginTop": "0.1875rem",
                "verticalAlign": "top",
              }
            }
          >
            <svg
              className="bpk-banner-alert__success-icon"
              height="18"
              style={
                Object {
                  "height": "1.125rem",
                  "width": "1.125rem",
                }
              }
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm5.9 7l-6.5 7.4c-.4.5-1.2.6-1.7.1l-3.5-3.1c-.3-.2-.3-.6-.1-.8l.8-.9c.2-.3.6-.3.8-.1l2.4 2.1c.1.1.3.1.3 0L16 7.4c.2-.2.6-.3.8-.1l.9.8c.3.3.4.6.2.9z"
              />
            </svg>
          </span>
        </span>
         
        <span
          className="bpk-banner-alert__message"
        >
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </span>
         
        <span
          className="bpk-banner-alert__toggle"
        >
          <button
            aria-expanded={true}
            aria-label="View more"
            className="bpk-banner-alert__toggle-button"
            title="View more"
          >
            <span
              style={
                Object {
                  "display": "inline-block",
                  "lineHeight": "1.125rem",
                  "marginTop": "0.1875rem",
                  "verticalAlign": "top",
                }
              }
            >
              <svg
                className="bpk-banner-alert__expand-icon bpk-banner-alert__expand-icon--flipped"
                height="18"
                style={
                  Object {
                    "height": "1.125rem",
                    "width": "1.125rem",
                  }
                }
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 17.5l-7.2-6.4c-.6-.5-.7-1.5-.1-2.1.5-.6 1.5-.7 2.1-.1l5.2 4.6 5.2-4.6c.6-.6 1.6-.5 2.1.1s.5 1.6-.1 2.1L12 17.5z"
                />
              </svg>
            </span>
          </button>
        </span>
      </header>
      <div
        onTransitionEnd={[Function]}
        style={
          Object {
            "MozTransition": "height 200ms ease ",
            "OTransition": "height 200ms ease ",
            "WebkitTransition": "height 200ms ease ",
            "height": "auto",
            "msTransition": "height 200ms ease ",
            "overflow": "visible",
            "transition": "height 200ms ease ",
          }
        }
      >
        <div>
          <div
            className="bpk-banner-alert__children-container"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id
blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis
nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at. Mauris
porta varius ullamcorper. Sed laoreet libero mauris, non pretium lectus accumsan et. Suspendisse vehicula ullamcorper
sapien, et dapibus mi aliquet non. Pellentesque auctor sagittis lectus vitae rhoncus. Fusce id enim porttitor, mattis
ante in, vestibulum nulla.
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
